applications/web-system/landingpage/external-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: landing-page-ext
  namespace: web-system
spec:
  type: ExternalName
  externalName: s3.happylittlecloud.ca
