applications/web-system/landingpage/manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: landing-page
  namespace: web-system
spec:
  ports: 
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: landing-page
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: landing-page
  namespace: web-system
spec:
  selector:
    matchLabels:
      app: landing-page
  replicas: 1
  template:
    metadata:
      labels:
        app: landing-page
    spec:
      containers:
      - name: landing-page
        image: blairdrummond/happylittlecloud:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
