applications/web-system/landingpage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: landing-page
  namespace: web-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /happylittlecloud/index.html
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/upstream-vhost: s3.happylittlecloud.ca
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "happylittlecloud.ca"
    secretName: happylittlecloud-tls
  rules:
  - host: "happylittlecloud.ca"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing-page-ext
            port:
              number: 443
