applications/web-system/landingpage/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: landing-page
  namespace: web-system
spec:
  hosts:
  - happylittlecloud.ca
  gateways:
  - istio-system/ingressgateway
  http:
  - route:
    - destination:
        port:
          number: 80
        host: landing-page.web-system.svc.cluster.local
